--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -10,13 +10,12 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
-    <title>Elegance - Creative HTML5 Template</title>
+    <title>Captions</title>
 <!--
 Elegance Template
 https://templatemo.com/tm-528-elegance
 -->
     <!-- Additional CSS Files -->
-    
     <link rel="stylesheet" type="text/css" href="{%static 'css/bootstrap.min.css' %}">
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.css' %}">
@@ -47,7 +46,6 @@ https://templatemo.com/tm-528-elegance
 
     <script src="{% static 'js/custom.js' %}"></script>
 
-
     </head>
     
     <body>
@@ -74,7 +72,7 @@ https://templatemo.com/tm-528-elegance
                                 <ul class="navigation-menu nav navbar-nav navbars" id="nav">
                                     <li data-menuanchor="slide01" class="active"><a href="#slide01">Home</a></li>
                                     <li data-menuanchor="slide02"><a href="#slide02">Model</a></li>
-                                    <li data-menuanchor="slide03"><a href="#slide03">About Us</a></li>
+                                    <li data-menuanchor="slide05"><a href="#slide05">Our Work</a></li>
                                 </ul>
                             </div>
                         </nav>
@@ -82,6 +80,8 @@ https://templatemo.com/tm-528-elegance
                 </div>
             </div>
         </header>
+
+        
 
         <div id="fullpage" class="fullpage-default">
 
@@ -91,12 +91,10 @@ https://templatemo.com/tm-528-elegance
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
                         <h1 class="welcome-title animate" data-animate="fadeInUp">Image Caption Generator</h1>
                         <p class="animate" data-animate="fadeInUp">We help u decipher scenes u cannot decipher on ur own(wink). Thank you.</p>
-                        <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="{% static 'images/mouse-scroll.png' %}" alt=""><span>Scroll Down</span></div>
+                        <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="{% static 'images/mouse-scroll.png' %}"alt=""><span>Scroll Down</span></div>
                     </div>
                 </div>
             </div>
-
-            
 
             <div class="section animated-row" data-section="slide02">
                 <div class="section-inner">
@@ -109,7 +107,7 @@ https://templatemo.com/tm-528-elegance
                                             <div class="animate" data-animate="fadeInUp">
                                                 <span>Model</span>
                                                 <h2>Predicted label is:</h2>
-                                                <p>{{result}}.</p>
+                                                <p>{{result}}</p>
                                             </div>
                                             <form method="post" enctype="multipart/form-data" action="predictImage">
                                                 {% csrf_token %}
@@ -128,58 +126,75 @@ https://templatemo.com/tm-528-elegance
                 </div>
             </div>
 
-            <div class="section animated-row" data-section="slide02">
+            
+            
+
+            <div class="section animated-row" data-section="slide06">
                 <div class="section-inner">
-                    <div class="about-section">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8 wide-col-laptop">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="about-contentbox">
-                                            <div class="animate" data-animate="fadeInUp">
-                                                <span>About Us</span>
-                                                <h2>Who are we?</h2>
-                                                <p>Credits go to <strong>Saumay Sagar Kulshreshtah</strong> and <strong>Vinay Upadhayay</strong> for photos and video used in this template. Vivamus tincidunt, augue rutrum convallis volutpat, massa lacus tempus leo.</p>
+                    <div class="row justify-content-center">
+                        <div class="col-md-8 wide-col-laptop">
+                            <div class="title-block animate" data-animate="fadeInUp">
+                                <span>Our Work</span>
+                                <p>This is <strong>Saumay Sagar Kulshreshtah</strong> and <strong>Vinay Upadhayay</strong>from MITS CSE 3rd year. Check out some of our previous projects from the links given on the side bar through the given social media handels</p>
+                            </div>
+                            <div class="gallery-section">
+                                <div class="gallery-list owl-carousel">
+                                    <div class="item animate" data-animate="fadeInUp">
+                                        <div class="portfolio-item">
+                                            <div class="thumb">
+                                                <img src="{%static 'images\pythonlogo.jpg' %}" alt="" width = "370" height="310">
                                             </div>
-                                            <div class="facts-list owl-carousel">
-                                                <div class="item animate" data-animate="fadeInUp">
-                                                    <div class="counter-box">
-                                                        <i class="fa fa-trophy counter-icon" aria-hidden="true"></i><span class="count-number">32</span> Awards Won
-                                                    </div>
-                                                </div>
-                                                <div class="item animate" data-animate="fadeInUp">
-                                                    <div class="counter-box">
-                                                        <i class="fa fa-graduation-cap counter-icon" aria-hidden="true"></i><span class="count-number">4</span> Degrees
-                                                    </div>
-                                                </div>
-                                                <div class="item animate" data-animate="fadeInUp">
-                                                    <div class="counter-box">
-                                                        <i class="fa fa-desktop counter-icon" aria-hidden="true"></i><span class="count-number">12</span> Working Years
-                                                    </div>
-                                                </div>
-                                                <div class="item animate" data-animate="fadeInUp">
-                                                    <div class="counter-box">
-                                                        <i class="fa fa-support counter-icon" aria-hidden="true"></i><span class="count-number">6</span> Team Members
-                                                    </div>
-                                                </div>
-                                                <div class="item animate" data-animate="fadeInUp">
-                                                    <div class="counter-box">
-                                                        <i class="fa fa-certificate counter-icon" aria-hidden="true"></i><span class="count-number">10</span> Certificates
-                                                    </div>
-                                                </div>
+                                            <div class="thumb-inner animate" data-animate="fadeInUp">
+                                                <h4>Python scrptiong and automation</h4>
+                                                <p>My automaton scripts to do my daily cumbersome work.</p>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
-                                        <figure class="about-img animate" data-animate="fadeInUp"><img src="{% static 'images/profile-girl.jpg' %}" class="rounded" alt=""></figure>
+                                    <div class="item animate" data-animate="fadeInUp">
+                                        <div class="portfolio-item">
+                                            <div class="thumb">
+                                                <img src="{%static 'images\cute-shopping-cart-logo_23-2148453859.jpg' %}" alt="" width = "370" height="310">
+                                            </div>
+                                            <div class="thumb-inner animate" data-animate="fadeInUp">
+                                                <h4>Pic Click</h4>
+                                                <p>One of my earlier project which was embeded with an image search functionality and lot more if you take a closer look.</p>
+                                            </div>
+                                        </div>
                                     </div>
+                                    <div class="item animate" data-animate="fadeInUp">
+                                        <div class="portfolio-item">
+                                            <div class="thumb">
+                                                <img src="{%static 'images\djangologo.png' %}" alt="" width = "370" height="310">
+                                            </div>
+                                            <div class="thumb-inner animate" data-animate="fadeInUp">
+                                                <h4>Django websites</h4>
+                                                <p>Contains websites i made with django framework as backend.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item animate" data-animate="fadeInUp">
+                                        <div class="portfolio-item">
+                                            <div class="thumb">
+                                                <img src="{%static 'images\textutils.png' %}" alt="" width = "370" height="310">
+                                            </div>
+                                            <div class="thumb-inner animate" data-animate="fadeInUp">
+                                                <h4>Text UTilst</h4>
+                                                <p>Remove spacing and filter unwanted syllabls and so muc hwith my earliest project.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
- 
+
+            
+
+            
+        </div>
 
         <div id="social-icons">
             <div class="text-right">
@@ -192,6 +207,7 @@ https://templatemo.com/tm-528-elegance
             </div>
         </div>
     </div>  
+
 
 
   </body>
